--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.7",
     "del": "^5.1.0",
+    "focus-within-polyfill": "^5.0.9",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^7.0.1",
